// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  class="selector"
  data-testid="choice-selector"
>
  <div
    class="label"
  >
    Add to 2 ability scores
  </div>
  <div
    class="select-div"
  >
    <div
      class="container"
      data-testid="select"
      style="font-size: 1.2rem;"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        class="button"
        data-testid="select-button"
        type="button"
      >
        —
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
      <ul
        aria-activedescendant="—"
        class="list"
        data-testid="select-list"
        role="listbox"
        style="display: none;"
        tabindex="-1"
      >
        <li
          aria-selected="true"
          class="item selected"
          data-testid="data-blank"
          role="option"
          tabindex="0"
        >
          —
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-dex"
          role="option"
          tabindex="0"
        >
          +1 
				Dexterity
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-str"
          role="option"
          tabindex="0"
        >
          +2 
				Strength
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-wis"
          role="option"
          tabindex="0"
        >
          +1 
				Wisdom
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-int"
          role="option"
          tabindex="0"
        >
          +2 
				Intelligence
        </li>
      </ul>
    </div>
    <div
      class="container"
      data-testid="select"
      style="font-size: 1.2rem;"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        class="button"
        data-testid="select-button"
        type="button"
      >
        —
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
      <ul
        aria-activedescendant="—"
        class="list"
        data-testid="select-list"
        role="listbox"
        style="display: none;"
        tabindex="-1"
      >
        <li
          aria-selected="true"
          class="item selected"
          data-testid="data-blank"
          role="option"
          tabindex="0"
        >
          —
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-dex"
          role="option"
          tabindex="0"
        >
          +1 
				Dexterity
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-str"
          role="option"
          tabindex="0"
        >
          +2 
				Strength
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-wis"
          role="option"
          tabindex="0"
        >
          +1 
				Wisdom
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-int"
          role="option"
          tabindex="0"
        >
          +2 
				Intelligence
        </li>
      </ul>
    </div>
  </div>
  <div
    class="button-div"
  >
    <button
      class="button negative"
      style="font-size: 1.3rem; padding: 1rem; margin: 0.25rem;"
      type="button"
    >
      Reset
    </button>
    <button
      class="button positive"
      disabled=""
      style="font-size: 1.3rem; padding: 1rem; margin: 0.25rem;"
      type="button"
    >
      Apply
    </button>
  </div>
</div>
`;

exports[`renders correctly 2`] = `
<div
  class="selector"
  data-testid="choice-selector"
>
  <div
    class="label"
  >
    Add +1 to 2 ability scores
  </div>
  <div
    class="select-div"
  >
    <div
      class="container"
      data-testid="select"
      style="font-size: 1.2rem;"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        class="button"
        data-testid="select-button"
        type="button"
      >
        —
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
      <ul
        aria-activedescendant="—"
        class="list"
        data-testid="select-list"
        role="listbox"
        style="display: none;"
        tabindex="-1"
      >
        <li
          aria-selected="true"
          class="item selected"
          data-testid="data-blank"
          role="option"
          tabindex="0"
        >
          —
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-dex"
          role="option"
          tabindex="0"
        >
          
				Dexterity
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-str"
          role="option"
          tabindex="0"
        >
          
				Strength
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-wis"
          role="option"
          tabindex="0"
        >
          
				Wisdom
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-int"
          role="option"
          tabindex="0"
        >
          
				Intelligence
        </li>
      </ul>
    </div>
    <div
      class="container"
      data-testid="select"
      style="font-size: 1.2rem;"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        class="button"
        data-testid="select-button"
        type="button"
      >
        —
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
      <ul
        aria-activedescendant="—"
        class="list"
        data-testid="select-list"
        role="listbox"
        style="display: none;"
        tabindex="-1"
      >
        <li
          aria-selected="true"
          class="item selected"
          data-testid="data-blank"
          role="option"
          tabindex="0"
        >
          —
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-dex"
          role="option"
          tabindex="0"
        >
          
				Dexterity
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-str"
          role="option"
          tabindex="0"
        >
          
				Strength
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-wis"
          role="option"
          tabindex="0"
        >
          
				Wisdom
        </li>
        <li
          aria-selected="false"
          class="item"
          data-testid="data-int"
          role="option"
          tabindex="0"
        >
          
				Intelligence
        </li>
      </ul>
    </div>
  </div>
  <div
    class="button-div"
  >
    <button
      class="button negative"
      style="font-size: 1.3rem; padding: 1rem; margin: 0.25rem;"
      type="button"
    >
      Reset
    </button>
    <button
      class="button positive"
      disabled=""
      style="font-size: 1.3rem; padding: 1rem; margin: 0.25rem;"
      type="button"
    >
      Apply
    </button>
  </div>
</div>
`;
